overflow bug fixed

--- a/src/components/actus/ActuPage/ActuPage.module.css
+++ b/src/components/actus/ActuPage/ActuPage.module.css
@@ -4,7 +4,7 @@
 
 .actus {
   width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 .selector {
   width: 20%;
